--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </section>
 
 <section class="ship-section">
-	<img class="ship-1" src="img/ship-1.svg" alt="">
-	<img class="ship-2" src="img/ship-2.svg" alt="">
-	<img class="ship-3" src="img/ship-3.svg" alt="">
-	<img class="ship-4" src="img/ship-4.svg" alt="">
+	<img class="ships-1" src="img/ship-1.svg" alt="">
+	<img class="ships-2" src="img/ship-2.svg" alt="">
+	<img class="ships-1" src="img/ship-3.svg" alt="">
+	<img class="ships-2" src="img/ship-4.svg" alt="">
 </section>
 
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
